--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto: none
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.cache: false
+#test gitignore
